# pamir-MLpermafrost

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  environment.yaml  pyproject.toml
notebooks/: .template.ipynb  0_data_explore.ipynb  0_make_train_data.ipynb  1_data_explore.ipynb  1_ml_exploration.ipynb  3_gp-simple.ipynb  4_gp-ground_temp.ipynb.ipynb  params_laptop.yaml
notebooks/0_rapid_development/: 1_data_explore.ipynb  2_gbm_exploration.ipynb  3_gp_simple.ipynb  README.md
notebooks/1_learning_about_GPs/: 0_basic_gp_numpy.ipynb  1_basic_gpytorch.ipynb  2_nonlinear_gpytorch_exact.ipynb  3_nonlinear_gpytorch_approx.ipynb  README.md  tools.py
notebooks/2_data_prep/: 0_choosing_target_variable.ipynb  1_profile_prep.ipynb  README.md
notebooks/3_model_selection/: 1_modelling_ground_temp.ipynb  README.md
src/pamir_mlpermafrost/: __init__.py
src/pamir_mlpermafrost/conf/: laptop-cli.yaml  laptop-jupyter.yaml
src/pamir_mlpermafrost/conf/data/: laptop.yaml
src/pamir_mlpermafrost/conf/model/: gp_mixed_mean_cat_index.yaml
src/pamir_mlpermafrost/conf/optimizer/: adam.yaml
src/pamir_mlpermafrost/conf/preprocessing/: default.yaml
src/pamir_mlpermafrost/data/: __init__.py  dem_utils.py  processors.py  s3.py  s3_utils.py  training.py
src/pamir_mlpermafrost/models/: __init__.py  data.py  datasets.py
src/pamir_mlpermafrost/preprocessing/: __init__.py  datasets.py  scalers.py  splits.py
src/pamir_mlpermafrost/utils/: __init__.py  config.py  general.py  hydra_helpers.py
src/pamir_mlpermafrost/viz/: __init__.py  stats_plots.py
(+8 files in other folders)
